<resources>
    <string name="app_name">Center App</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="username">UserName</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="e_mail">E-mail</string>
    <string name="enter_your_e_mail">Enter Your E-mail</string>
    <string name="sign_up">Sign UP</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="subject_name">Subject Name</string>
    <string name="enter_your_subject">Enter Your Subject</string>
    <string name="already_have_an_account_click_here">Already have an Account</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_code">Enter Your Code</string>
    <string name="code">Code</string>
    <string name="enter_the_code_consisting_of_9_numbers">Enter The Code numbers</string>
    <string name="pay_20">Pay 20 $</string>
    <string name="add_note">Notes</string>
    <string name="chats">Files</string>
    <string name="add_comments">Votes</string>
    <string name="vote">Votes</string>
    <string name="documents">Images</string>
    <string name="click_here">Click here</string>
    <string name="add">Add</string>
    <string name="enter_your_note">Enter Your Note</string>
    <string name="enter_your_title">Enter Your Title</string>
    <string name="title">Title</string>
    <string name="note_show">Note Show</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="choose_file">Choose File</string>
    <string name="enter_your_file">Enter Your File</string>
    <string name="upload">Upload</string>
    <string name="show_upload">Show Upload</string>
    <string name="upload_file">Upload File</string>
    <string name="enter_your_vote">Enter Your Vote</string>
    <string name="pres_here_to_get_your_file">Pres here to Get Your File</string>
</resources>