<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDDDDD"
    tools:context=".UiStudent.SignUpStudent">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgback_std"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/sign_up"
            android:textColor="@color/txt_font"
            android:textSize="@dimen/_19ssp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="86dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_holder"
            android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_4sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:includeFontPadding="false"
                        android:text="@string/username"
                        android:textColor="@color/txt_font"
                        android:textSize="@dimen/_18ssp"

                        />

                    <EditText
                        android:id="@+id/inputusernamestd"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@drawable/background_editteaxt"
                        android:hint="@string/enter_your_name"
                        android:textColor="@color/black"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:padding="@dimen/_10sdp"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:includeFontPadding="false"
                        android:text="@string/e_mail"
                        android:textColor="@color/txt_font"
                        android:textSize="@dimen/_18ssp"

                        />

                    <EditText
                        android:id="@+id/inputemailstd"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:background="@drawable/background_editteaxt"
                        android:hint="@string/enter_your_e_mail"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:includeFontPadding="false"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:includeFontPadding="false"
                        android:text="@string/password"
                        android:textColor="@color/txt_font"
                        android:textSize="@dimen/_18ssp"

                        />

                    <EditText
                        android:id="@+id/inputpasswordstd"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@drawable/background_editteaxt"
                        android:hint="@string/enter_your_password"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:includeFontPadding="false"
                        android:inputType="textPassword"
                        android:textSize="@dimen/_13ssp" />

                </LinearLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignupstd"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@drawable/background_editteaxt"
                    android:includeFontPadding="false"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:textColor="@color/cardview_dark_background"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintTop_toBottomOf="@id/layout_holder" />

                <ProgressBar
                    android:id="@+id/progressSignupstd"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible" />
            </FrameLayout>
           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               >

               <TextView
                   android:id="@+id/textAccount"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="64dp"
                   android:layout_marginBottom="16dp"
                   android:gravity="center"
                   android:text="@string/already_have_an_account_click_here"
                   android:textColor="@color/txt_font"
                   android:textSize="@dimen/_13ssp"
                   app:layout_constraintBottom_toBottomOf="parent"

                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintVertical_bias="1.0" />

               <com.google.android.material.button.MaterialButton
                   android:id="@+id/btnSigninstd"
                   android:layout_width="wrap_content"
                   android:layout_height="@dimen/_40sdp"
                   android:layout_marginEnd="40dp"
                   android:backgroundTint="#DDDDDD"
                   android:includeFontPadding="false"
                   android:text="@string/click_here"
                   android:textAllCaps="false"
                   android:textColor="@color/text_buttons"
                   android:textSize="@dimen/_13ssp"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintVertical_bias="0.0" />
           </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>