<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:hint="@string/enter_your_title"
        android:background="@drawable/background_editteaxt"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/edit_note"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_65sdp"
        android:layout_gravity="center"
        android:padding="@dimen/_10sdp"
        android:textColorHint="@color/black"
        android:background="@drawable/background_editteaxt"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_your_note"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_title"  />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_Note"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/add"
        android:background="@drawable/background_editteaxt"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_gravity="center"
        android:textColor="@color/text_buttons"
        android:textSize="@dimen/_18ssp"
        android:layout_marginBottom="@dimen/_13sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_note"
        app:layout_constraintVertical_bias="0.319" />
</LinearLayout>